Cleaned up ContentUpdateEvent so the LocalDateTime doesn't need to be specific, and the super's construction doesn't need to be called.